@@ -11,6 +11,8 @@ software-store (0.1.2) UNRELEASEDkarmic; urgency=low
   * softwarestore/view/catview.py:
     - fix crash in non english languages when parsing the 
       applications.menu (LP: #419356)
+  * improve the search entry (LP: #419740, LP: #419744) and do not
+    loose focus when typing in it
   
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 26 Aug 2009 18:12:56 +0200
 
